попытка исправления ошибки сонара